--- a/06-events-practice/2-tooltip/style.css
+++ b/06-events-practice/2-tooltip/style.css
@@ -12,3 +12,12 @@
   transition: opacity 0.1s ease-out;
   z-index: 99;
 }
+
+
+.right-border {
+  transform: translateX(-100%);
+}
+
+.top-border {
+  transform: translateY(-100%);
+}
